# dor-py

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.pocketbase  README.md  compose.yml  conftest.py  env.example  generic-worker.py  init.sh  kostin.txt  pb_user_setup.sh  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/: manual-deploy-unstable.yaml.scratch
.github/workflows/: build-default-latest.yaml  build-latest.yaml  ci.yaml  release-cli.yaml  scratch.yaml
db/: init.sql
domain/: events.py
dor/: app.py  config.py  jobs.py  queues.py  settings.py
dor-pika-rabbitmq/: docker-compose.yml
dor-redis/: docker-compose.yml
dor/adapters/: bag_adapter.py  bag_reader.py  catalog.py  converter.py  event_store.py  eventpublisher.py  generate_service_variant.py  image_reader.py  image_text_extractor.py  make_bitonal_file.py  make_intermediate_file.py  sqlalchemy.py  technical_metadata.py
dor/builders/: asset.py  file_set.py  item.py  parts.py  premis.py  resource.py
dor/cli/: aptrustish.py  audit.py  main.py  package.py  repo.py  samples.py  upload.py
dor/console/: main.py
dor/domain/: commands.py  events.py  models.py
dor/providers/: FileProvider.py  accumulator.py  automation.py  build_file_set.py  descriptor_generator.py  file_provider.py  file_set_identifier.py  file_system_file_provider.py  filesets.py  ingest.py  models.py  (+20 more)
etc/: jhove-auto-install.xml  jhove.conf
experiments/DOROP-19/: Dockerfile  README.md  compose.yml  env.example  init.sh  pyproject.toml
experiments/DOROP-19/dor/: settings.py
experiments/DOROP-19/dor/cli/: main.py  mockyrie.py
experiments/DOROP-19/dor/mockyrie/: models.py
experiments/DOROP-19/dor/mockyrie/persistence/: metadata_adapter.py  persister.py  query_service.py  resource.py  resource_factory.py
experiments/dorop-20/: Dockerfile  README.md  compose.yml  pyproject.toml
experiments/dorop-20/metadata/: element_adapter.py  exceptions.py  mets_metadata_extractor.py  mets_metadata_parser.py  models.py  parsers.py
experiments/dorop-20/tests/: test_element_adapter.py  test_metadata_extractor.py  test_metadata_parser.py  test_parsers.py
features/: add_missing_files.feature  inspect_bin.feature  inspect_revision.feature  inspect_version.feature  store_resource.feature  update_resource.feature
gateway/: bundle.py  coordinator.py  deposit_directory.py  disk_package.py  enumerations.py  exceptions.py  fake_repository_gateway.py  file_mapping.py  memory_repository_gateway.py  object_file.py  ocfl_py_repository_gateway.py  ocfl_repository_gateway.py  package.py  repository_gateway.py  staging_object.py  validate.py  version_info.py
messagebus/: __init__.py  memory.py  rabbitmq.py
pyrocfl/: Cargo.toml  README.md
rocket/: Cargo.toml  README.md  kostin.txt
service_layer/: unit_of_work.py
tasks/: README.md  broker.py  test_task.py
templates/: metadata_mix.xml  mets_asset.xml  mets_file_set.xml  mets_item.xml  mets_resource.xml  premis_event.xml  premis_object.xml  preservation_mets.xml
tests/: conftest.py  test_bag_adapter.py  test_bag_reader.py  test_catalog.py  test_catalog_service.py  test_cli_package_upload.py  test_deposit_directory.py  test_descriptor_file_parser.py  test_descriptor_generator.py  test_disk_package.py  test_element_adapter.py  test_event_store.py  test_fake_repository_gateway.py  test_file_provider.py  test_file_set_processor.py  test_file_set_processor_contone_transcribed.py  test_file_set_processor_jp2_with_ocr.py  test_file_set_processor_needing_rotation.py  test_file_set_processor_transcript.py  test_file_set_processor_with_ocr.py  test_generate_mets.py  test_generate_profiles.py  test_generate_service_variant.py  test_image_reader.py  test_image_text_extractor.py  test_logger.py  test_make_intermediate_file.py  test_memory_message_bus.py  test_memory_repository_gateway.py  test_messagebus.py  test_ocfl_py_repository_gateway.py  test_ocfl_repository_gateway.py  test_ocfl_validate.py  test_package.py  test_package_client.py  test_package_generator.py  test_package_resource_merger.py  test_package_resource_provider.py  test_pending_file_set_accessor.py  test_preservation_event_file_parser.py  (+13 more)
utils/: element_adapter.py  logger.py  minter.py
(+242 files in other folders)
