[tool.poetry]
name = "dor"
version = "0.1.0"
description = "DOR scripts"
authors = ["Roger Espinosa <roger@umich.edu>"]
readme = "README.md"
packages = [{include = "dor"}]

[tool.poetry.scripts]
dor = "dor.cli.main:app"


[tool.poetry.dependencies]
python = "^3.12"
bagit = {version = "^1.9b2", allow-prereleases = true}
faker = "^30.3.0"
faker-biology = "^0.6.4"
pillow = "^10.4.0"
typer = "^0.12.5"
uuid6 = "^2024.7.10"
python-ulid = "^2.7.0"
jinja2 = "^3.1.4"
psycopg = "^3.2.3"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.2.2"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
