[tool.poetry]
name = "mets-metadata"
version = "0.1.0"
description = "METS <-> domain conversion"
authors = ["Sam Sciolla <ssciolla@umich.edu>"]
readme = "README.md"
packages = [{include = "metadata"}]

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
